--- a/notiatool/.vscode/tasks.json
+++ b/notiatool/.vscode/tasks.json
@@ -1,12 +1,15 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build installer",
             "type": "shell",
             "command": "clear; wails build --nsis"
+        },
+        {
+            "label": "build debug",
+            "type": "shell",
+            "command": "clear; wails build -debug"
         },
         {
             "label": "dev",
